Fri Sep  28 20:56:15 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed ewl_config, Needed to create ~/.e/ewl/config if it doesnt exist.
	* Fixed segv in ewl_config when the user config did not exist.
	* Fixed some autoconf/automake magic.

Fri Sep  28 17:28:42 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Forgot to configure the entry when deleting to left & right, fixed.
	* Now it's only possible to entry numbers in a Ewl_Spinner,
	  and when you change em, the value updates when you deselect the
	  spinner.
	* Spiffed up the Ewl_CheckButton & Ewl_RadioButton graphics.

Fri Sep  28 08:51:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Created a ewl_config application under tools/ewl_config, which you
	  can setup ewl in a easy way with.
	* Added a ewl_radiobutton_set_checked, and a ewl_radiobutton_is_checked.
	* Added a ewl_checkbutton_set_checked, and a ewl_checkbutton_is_checked.

Fri Sep  28 05:14:06 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Forgot to add a destroy callback to free Ewl_Notebook->pages.

Fri Sep  28 04:42:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Notebook widget.
	* Created a Ewl_Notebook test section in the test program.

Thu Sep  27 18:25:12 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Converted the Ewl_Spinner to match the new code.
	* I set the default Ewl_Entry font size to 10.
	* Added a Ewl_Spinner test section to the test application.

Thu Sep  20 13:57:55 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Separator.

Sat Sep  15 04:42:27 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed bug in Ewl_Entry, when calling ewl_text_set_text the cursor
	  appeared even if the entry wasn't selected.
	* Added a Ewl_Selection widget for selections in the Ewl_Entry and
	  the future Ewl_TextArea.

Sat Sep  15 18:59:40 2001 Christopher Rosendahl <crosendahl@northernwatch.com>